--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,7 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  box-sizing: inherit;
 }
 
 a {
@@ -13,6 +14,7 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
 }
 
 @media (prefers-color-scheme: dark) {
